--- a/midterm/dog/all.css
+++ b/midterm/dog/all.css
@@ -10,3 +10,8 @@ div {
 body {
     background-color:#111111;
 }
+div{
+    border-top:1px dashed #cccccc;
+    height: 1px;
+    overflow:hidden
+  }
