--- a/midterm/index.css
+++ b/midterm/index.css
@@ -9,7 +9,7 @@
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 10px;}
-  
+
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
@@ -28,11 +28,12 @@
   font-size: 36px;
   margin-left: 50px;}
 
-body{font-family: Arial, Helvetica, sans-serif;}
+body {
+  font-family: Arial, Helvetica, sans-serif;}
+
 .navbar {
   overflow: hidden;
-  background-color: #111;
-}
+  background-color: #111;}
 
 .navbar a {
   float: right;
@@ -46,25 +47,23 @@ body{font-family: Arial, Helvetica, sans-serif;}
   background-color:#783267;}
 
 span{
-    font-size:45px;
-    color:#ffffff;
-    cursor:pointer
-  }
+  font-size:45px;
+  color:#ffffff;
+  cursor:pointer}
 
-h2,p,pre{
-    color:#ffffff
-  }
-h2{
-    text-align:center;
-  }
+h1,h2,p,pre{
+  color:#ffffff}
+
+h1,h2{
+  text-align:center;}
+
 .line {
-    border-top:1px dashed #cccccc;
-    height: 1px;
-    overflow:hidden
-  }
+  border-top:1px dashed #cccccc;
+  height: 1px;
+  overflow:hidden}
+
 pre{
-    text-align:center;
-  }
+  text-align:center;}
+
 body {
-    background-color:#111111;
-}
+  background-color:#111111;}
