--- a/midterm/index.css
+++ b/midterm/index.css
@@ -29,7 +29,8 @@
   margin-left: 50px;}
 
 body {
-  font-family: Arial, Helvetica, sans-serif;}
+  font-family: Arial, Helvetica, sans-serif;
+  background-color:#111111;}
 
 .navbar {
   overflow: hidden;
@@ -64,6 +65,3 @@ h1,h2{
 
 pre{
   text-align:center;}
-
-body {
-  background-color:#111111;}
