--- a/final/index.css
+++ b/final/index.css
@@ -56,7 +56,7 @@
     color:#ffffff;
     text-align:center;}
   
-  .line {
+.line {
     border-top:1px dashed #cccccc;
     height: 1px;
     overflow:hidden}
@@ -96,3 +96,30 @@
 
 .show {
     display: block;}
+
+#sidebar_left {
+    background-color: rgb(172, 181, 231);
+    width: 200px;
+    height: 500px;
+    text-align: center;
+    float: left;}
+
+#sidebar_right {
+    background-color: rgb(172, 181, 231);
+    width: 200px;
+    height: 500px;
+    text-align: center;
+    float: right;}
+
+#content {
+    margin-left: 120px;
+    margin-right: 120px;
+    height: 400px;
+    background-color:#111111;
+    text-align: center;}
+
+#footer {
+    clear: both;
+    background-color: rgb(170, 196, 194);
+    height: 100px;
+    text-align: center;}
