--- a/final/index.css
+++ b/final/index.css
@@ -88,36 +88,238 @@ span{
 
 #sidebar_left {
     background-color: rgb(172, 181, 231);
-    width: 200px;
-    height: 500px;
-    text-align: center;
+    width: 105px;
+    height: 300px;
+    text-align: left;
     float: left;}
 
 #sidebar_right {
     background-color: rgb(172, 181, 231);
-    width: 200px;
-    height: 500px;
+    width: 250px;
+    height: 300px;
     text-align: center;
     float: right;}
 
 #content {
-    margin-left: 120px;
+    margin-left: 100px;
     margin-right: 120px;
-    height: 400px;
-    background-color:#111111;
-    text-align: center;}
+    height: 300px;
+    background-color:#ffffff;
+    text-align: left;}
 
 #footer {
     clear: both;
     background-color: rgb(170, 196, 194);
-    height: 100px;
+    height: 300px;
     text-align: center;}
 
-table {
-  color:aliceblue;
-}
-tr {
-  width:300;
-  border:1;
-  border-color: #cccccc;
-}
+.Bton1, .Bton2, .Bton3, .Bton4, .Bton5{
+    box-shadow: 0px 0px 0px 2px #9fb4f2;
+    background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+    background-color:#7892c2;
+    border-radius:10px;
+    border:1px solid #4e6096;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:19px;
+    padding:12px 37px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #283966;}
+
+.Bton1 {
+    position:absolute;
+    left:15px;
+    top:110px}
+
+.Bton2 {
+    position:absolute;
+    left:15px;
+    top:165px}
+
+.Bton3 {
+    position:absolute;
+    left:15px;
+    top:220px}
+
+.Bton4 {
+    position:absolute;
+    left:15px;
+    top:275px}
+
+.Bton5 {
+    position:absolute;
+    left:15px;
+    top:330px}
+
+.Bton1:hover, .Bton2:hover, .Bton3:hover, .Bton4:hover, .Bton5:hover {
+    background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+    background-color:#476e9e;}
+
+.Bton1:active .Bton2:active, .Bton3:active, .Bton4:active, .Bton5:active {
+    position:relative;
+    top:1px;}
+   
+.Btona, .Btonb, .Btonc, .Btond, .Btone, .Btonf, .Btong, .Btonh, .Btoni, .Btonj, .Btonk, .Btonl {
+    box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
+	background-color:#b8e356;
+	border-radius:6px;
+	border:1px solid #83c41a;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #86ae47;}
+    
+.Btona {
+    position:absolute;
+    right:180px;
+    top:110px}
+    
+.Btonb {
+    position:absolute;
+    right:100px;
+    top:110px}
+    
+.Btonc {
+    position:absolute;
+    right:20px;
+    top:110px}
+    
+.Btond {
+    position:absolute;
+    right:180px;
+    top:160px}
+    
+.Btone {
+    position:absolute;
+    right:100px;
+    top:160px}
+
+.Btonf {
+    position:absolute;
+    right:20px;
+    top:160px}
+        
+.Btong {
+    position:absolute;
+    right:180px;
+    top:210px}
+        
+.Btonh {
+    position:absolute;
+    right:100px;
+    top:210px}
+        
+.Btoni {
+    position:absolute;
+    right:20px;
+    top:210px}
+        
+.Btonj {
+    position:absolute;
+    right:180px;
+    top:260px}
+   
+.Btonk {
+    padding:6px 20px;
+    position:absolute;
+    right:100px;
+    top:260px}
+            
+.Btonl {
+    position:absolute;
+    right:20px;
+    top:260px}
+
+.Btona:hover, .Btonb:hover, .Btonc:hover, .Btond:hover, .Btone:hover, .Btonf:hover, .Btong:hover, .Btonh:hover, .Btoni:hover, .Btonj:hover, .Btonk:hover, .Btonl:hover {
+    background:linear-gradient(to bottom, #a5cc52 5%, #b8e356 100%);
+	background-color:#a5cc52;}
+    
+.Btona:active, .Btonb:active, .Btonc:active, .Btond:active, .Btone:active, .Btonf:active, .Btong:active, .Btonh:active, .Btoni:active, .Btonj:active, .Btonk:active, .Btonl:active {
+    position:relative;
+    top:1px;}
+
+.checkout {
+    box-shadow:inset 0px 1px 0px 0px #f7c5c0;
+    background:linear-gradient(to bottom, #fc8d83 5%, #e4685d 100%);
+    background-color:#fc8d83;
+    border-radius:4px;
+    border:1px solid #d83526;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:20px;
+    font-weight:bold;
+    padding:20px 10px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #b23e35;
+    position:absolute;
+    right:20px;
+    top:320px}
+
+.checkout:hover {
+    background:linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
+    background-color:#e4685d;}
+
+.checkout:active {
+    position:relative;
+    top:1px;}
+
+.cofe1, .cofe2, .cofe3, .cofe4, .cofe5 {
+    box-shadow:inset 0px 1px 0px 0px #fff6af;
+    background:linear-gradient(to bottom, #ffec64 5%, #ffac26 100%);
+    background-color:#ffec64;
+    border-radius:6px;
+    border:1px solid #ffaa22;
+    display:inline-block;
+    cursor:pointer;
+    color:#000000;
+    font-family:Georgia;
+    font-size:20px;
+    font-weight:bold;
+    padding:15px 25px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #fff18a;}
+
+.cofe1 {
+    padding:15px 26px;
+    position:absolute;
+    left:15px;
+    top:400px}
+    
+.cofe2 {
+    position:absolute;
+    left:15px;
+    top:460px}
+    
+.cofe3 {
+    position:absolute;
+    left:15px;
+    top:520px}
+    
+.cofe4 {
+    position:absolute;
+    left:15px;
+    top:580px}
+      
+.cofe5 {
+    position:absolute;
+    left:15px;
+    top:640px}
+    
+.cofe1:hover, .cofe2:hover, .cofe3:hover, .cofe4:hover, .cofe5:hover {
+        background:linear-gradient(to bottom, #ffac26 5%, #ffec64 100%);
+        background-color:#ffac26;}
+
+.cofe1:active, .cofe2:active, .cofe3:active, .cofe4:active, .cofe5:active {
+        position:relative;
+        top:1px;}
+       
