--- a/final/index.css
+++ b/final/index.css
@@ -110,8 +110,8 @@ span{
 #footer {
     clear: both;
     background-color: rgb(170, 196, 194);
-    height: 300px;
-    text-align: center;}
+    height: 200px;
+    text-align: left;}
 
 .Bton1, .Bton2, .Bton3, .Bton4, .Bton5{
     box-shadow: 0px 0px 0px 2px #9fb4f2;
@@ -272,4 +272,3 @@ span{
 .checkout:active {
     position:relative;
     top:1px;}
-
