--- a/final/index.css
+++ b/final/index.css
@@ -24,6 +24,9 @@
     right: 5px;
     font-size: 36px;
     margin-left: 50px;}
+
+.sidenav a:hover {
+    color: #111111;}
   
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -87,14 +90,14 @@ span{
     display: block;}
 
 #sidebar_left {
-    background-color: rgb(172, 181, 231);
-    width: 105px;
+    background-color:rgb(170, 196, 194);
+    width: 125px;
     height: 300px;
     text-align: left;
     float: left;}
 
 #sidebar_right {
-    background-color: rgb(172, 181, 231);
+    background-color:#111111;
     width: 250px;
     height: 300px;
     text-align: center;
@@ -110,15 +113,15 @@ span{
 #footer {
     clear: both;
     background-color: rgb(170, 196, 194);
-    height: 200px;
+    height: 310px;
     text-align: left;}
 
 .Bton1, .Bton2, .Bton3, .Bton4, .Bton5{
-    box-shadow: 0px 0px 0px 2px #9fb4f2;
-    background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-    background-color:#7892c2;
+    box-shadow: 0px 0px 0px 0px #276873;
+    background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+    background-color:#599bb3;
     border-radius:10px;
-    border:1px solid #4e6096;
+    border:1px solid #29668f;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
@@ -126,47 +129,47 @@ span{
     font-size:19px;
     padding:12px 37px;
     text-decoration:none;
-    text-shadow:0px 1px 0px #283966;}
+    text-shadow:0px 1px 0px #3d768a;}
 
 .Bton1 {
     position:absolute;
-    left:15px;
-    top:100px}
+    left:25px;
+    top:85px}
 
 .Bton2 {
     position:absolute;
-    left:15px;
-    top:155px}
+    left:25px;
+    top:145px}
 
 .Bton3 {
     position:absolute;
-    left:15px;
-    top:210px}
+    left:25px;
+    top:205px}
 
 .Bton4 {
     position:absolute;
-    left:15px;
+    left:25px;
     top:265px}
 
 .Bton5 {
     position:absolute;
-    left:15px;
-    top:320px}
+    left:25px;
+    top:325px}
 
 .Bton1:hover, .Bton2:hover, .Bton3:hover, .Bton4:hover, .Bton5:hover {
-    background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-    background-color:#476e9e;}
+    background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+    background-color:#408c99;}
 
 .Bton1:active .Bton2:active, .Bton3:active, .Bton4:active, .Bton5:active {
     position:relative;
     top:1px;}
    
 .Btona, .Btonb, .Btonc, .Btond, .Btone, .Btonf, .Btong, .Btonh, .Btoni, .Btonj, .Btonk, .Btonl {
-    box-shadow:inset 0px 1px 0px 0px #d9fbbe;
-	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
-	background-color:#b8e356;
+    box-shadow:inset 0px 1px 0px 0px #333532;
+	background:linear-gradient(to bottom, #111111 5%, #111111 100%);
+	background-color:#212222;
 	border-radius:6px;
-	border:1px solid #83c41a;
+	border:1px solid #ffffff;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -175,7 +178,7 @@ span{
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #86ae47;}
+	text-shadow:0px 1px 0px #1d1b1b;}
     
 .Btona {
     position:absolute;
@@ -234,24 +237,25 @@ span{
     top:250px}
             
 .Btonl {
+    padding:6px 26px;
     position:absolute;
     right:20px;
     top:250px}
 
 .Btona:hover, .Btonb:hover, .Btonc:hover, .Btond:hover, .Btone:hover, .Btonf:hover, .Btong:hover, .Btonh:hover, .Btoni:hover, .Btonj:hover, .Btonk:hover, .Btonl:hover {
-    background:linear-gradient(to bottom, #a5cc52 5%, #b8e356 100%);
-	background-color:#a5cc52;}
+    background:linear-gradient(to bottom, #dddddd 5%, #dddddd 100%);
+    background-color:#dddddd;}
     
 .Btona:active, .Btonb:active, .Btonc:active, .Btond:active, .Btone:active, .Btonf:active, .Btong:active, .Btonh:active, .Btoni:active, .Btonj:active, .Btonk:active, .Btonl:active {
     position:relative;
     top:1px;}
 
 .checkout {
-    box-shadow:inset 0px 1px 0px 0px #f7c5c0;
-    background:linear-gradient(to bottom, #fc8d83 5%, #e4685d 100%);
-    background-color:#fc8d83;
+    box-shadow:inset 0px 1px 0px 0px #276873;
+    background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+    background-color:#599bb3;
     border-radius:4px;
-    border:1px solid #d83526;
+    border:1px solid #29668f;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
@@ -260,15 +264,16 @@ span{
     font-weight:bold;
     padding:20px 10px;
     text-decoration:none;
-    text-shadow:0px 1px 0px #b23e35;
+    text-shadow:0px 1px 0px #3d768a;
     position:absolute;
     right:20px;
     top:300px}
 
 .checkout:hover {
-    background:linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
-    background-color:#e4685d;}
+    background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+    background-color:#408c99;}
 
 .checkout:active {
     position:relative;
     top:1px;}
+
