--- a/final/index.css
+++ b/final/index.css
@@ -277,3 +277,16 @@ span{
     position:relative;
     top:1px;}
 
+.red{
+    color:#111111;
+    font-size: 15px;}
+
+.name{
+    width: 150px;}
+
+.table{
+    text-align: center;}
+
+.table2{
+    text-align:center;
+    font-size: 15px;}
