--- a/final/index.css
+++ b/final/index.css
@@ -116,12 +116,12 @@ span{
     height: 310px;
     text-align: left;}
 
-.Bton1, .Bton2, .Bton3, .Bton4, .Bton5{
-    box-shadow: 0px 0px 0px 0px #276873;
-    background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-    background-color:#599bb3;
+.Bton1, .Bton2, .Bton3, .Bton4, .Bton5 {
+    box-shadow: 0px 0px 0px 0px #333532;
+    background:linear-gradient(to bottom, #111111 5%, #111111 100%);
+    background-color:#212222;
     border-radius:10px;
-    border:1px solid #29668f;
+    border:1px solid #ffffff;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
@@ -129,7 +129,7 @@ span{
     font-size:19px;
     padding:12px 37px;
     text-decoration:none;
-    text-shadow:0px 1px 0px #3d768a;}
+    text-shadow:0px 1px 0px #1d1b1b;}
 
 .Bton1 {
     position:absolute;
@@ -156,9 +156,9 @@ span{
     left:25px;
     top:325px}
 
-.Bton1:hover, .Bton2:hover, .Bton3:hover, .Bton4:hover, .Bton5:hover {
-    background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-    background-color:#408c99;}
+.Bton1:hover, .Bton2:hover, .Bton3:hover, .Bton4:hover, .Bton5:hover, .Btona:hover, .Btonb:hover, .Btonc:hover, .Btond:hover, .Btone:hover, .Btonf:hover, .Btong:hover, .Btonh:hover, .Btoni:hover, .Btonj:hover, .Btonk:hover, .Btonl:hover {
+    background:linear-gradient(to bottom, #dddddd 5%, #dddddd 100%);
+    background-color:#dddddd;}
 
 .Bton1:active .Bton2:active, .Bton3:active, .Bton4:active, .Bton5:active {
     position:relative;
@@ -242,10 +242,6 @@ span{
     right:20px;
     top:250px}
 
-.Btona:hover, .Btonb:hover, .Btonc:hover, .Btond:hover, .Btone:hover, .Btonf:hover, .Btong:hover, .Btonh:hover, .Btoni:hover, .Btonj:hover, .Btonk:hover, .Btonl:hover {
-    background:linear-gradient(to bottom, #dddddd 5%, #dddddd 100%);
-    background-color:#dddddd;}
-    
 .Btona:active, .Btonb:active, .Btonc:active, .Btond:active, .Btone:active, .Btonf:active, .Btong:active, .Btonh:active, .Btoni:active, .Btonj:active, .Btonk:active, .Btonl:active {
     position:relative;
     top:1px;}
