--- a/final/menu/que.css
+++ b/final/menu/que.css
@@ -24,6 +24,11 @@ h1 {
 
 .com {
     position:absolute;
-    top:90%;
-    left:70%;
-}
+    top:72%;
+    left:48%;}
+
+.back {
+    position:absolute;
+    top:93%;
+    left:80%;}
+
