--- a/0/aaa.css
+++ b/0/aaa.css
@@ -284,3 +284,8 @@ span{
     text-align:center;
     font-size: 18px;}
 
+    .txtb{
+        border-bottom: 2px solid #adadad;
+        position: relative;
+        margin: 30px 0;
+      }
