--- a/final/survey/data.css
+++ b/final/survey/data.css
@@ -1,9 +1,8 @@
-
 h2{
     color:#ffffff;
     text-align: center;}
 
-.aaa{    
+.frame{    
     margin-left:auto;
     margin-right:auto;
     border:1px blue solid;
