--- a/final/survey/que.css
+++ b/final/survey/que.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:#111111;}
 
-.a{    
+.frame{    
     margin-left:auto;
     margin-right:auto;
     border:1px blue solid;
