--- a/final/login/login.css
+++ b/final/login/login.css
@@ -1,83 +1,79 @@
 *{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    font-family: montserrat;
-    box-sizing: border-box;}
+  margin: 0;
+  font-family: montserrat;
+  box-sizing: border-box;}
 
-  body{
-    min-height: 100vh;
-    background-color: #111111;}
+body{
+  min-height: 100vh;
+  background-color: #111111;}
 
-  .login-form{
-    width: 360px;
-    background: #f1f1f1;
-    height: 580px;
-    padding: 80px 40px;
-    border-radius: 10px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);}
+.login-form{
+  width: 360px;
+  background: #ffffff;
+  height: 580px;
+  padding: 80px 40px;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);}
 
-  .login-form h1{
-    text-align: center;
-    margin-bottom: 60px;}
+.login-form, h1{
+  text-align: center;
+  margin-bottom: 60px;}
 
-  .txtb{
-    border-bottom: 2px solid #adadad;
-    position: relative;
-    margin: 30px 0;}
+h1{
+  font-size: 45px;} 
 
-  .txtb input{
-    font-size: 15px;
-    color: #333;
-    border: none;
-    width: 100%;
-    outline: none;
-    background: none;
-    padding: 0 5px;
-    height: 40px;}
+.txtb{
+  border-bottom: 2px solid #adadad;
+  position: relative;
+  margin: 30px 0;}
 
-  .txtb span::before{
-    content: attr(data-placeholder);
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: #adadad;
-    transform: translateY(-50%);
-    z-index: -1;
-    transition: .5s;}
+.txtb input{
+  font-size: 20px;
+  color: #333;
+  border: none;
+  width: 100%;
+  outline: none;
+  padding: 0 5px;
+  height: 40px;}
 
-  .txtb span::after{
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    background: #111111;}
+.txtb span::before{
+  content: attr(data-placeholder);
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);}
 
-  .focus + span::before{
-    top: -5px;}
+.txtb span::after{
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background: #111111;}
 
-  .focus + span::after{
-    width: 100%;}
+.logbtn{
+  font-size: 22px;
+  display: block;
+  width: 100%;
+  height: 50px;
+  border: none;
+  background:#111111;
+  background-size: 200%;
+  color: #fff;
+  cursor: pointer;}
 
-  .logbtn{
-    font-size: 18px;
-    display: block;
-    width: 100%;
-    height: 50px;
-    border: none;
-    background:#111111;
-    background-size: 200%;
-    color: #fff;
-    outline: none;
-    cursor: pointer;}
+.logbtn:hover{
+  background-position: right;}
 
-  .logbtn:hover{
-    background-position: right;}
+.bottom-text{
+  margin-top: 60px;
+  text-align: center;
+  font-size: 18px;}
 
-  .bottom-text{
-    margin-top: 60px;
-    text-align: center;
-    font-size: 18px;}
+.back{
+  position:absolute;
+  top:93%;
+  left:48%;}
+  
